--- a/app/src/main/res/menu/activity_main_navigator_drawer.xml
+++ b/app/src/main/res/menu/activity_main_navigator_drawer.xml
@@ -4,7 +4,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_gps"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_location"
             android:title="Posicion" />
         <item
             android:id="@+id/nav_gallery"
@@ -20,7 +20,7 @@
         <menu>
             <item
                 android:id="@+id/nav_BT"
-                android:icon="@drawable/ic_menu_send"
+                android:icon="@drawable/ic_search"
                 android:title="Bluetooth"
                 app:actionLayout="@layout/layout_bt"
                 />
@@ -30,7 +30,7 @@
                 android:title="Desarrolladores" />
             <item
                 android:id="@+id/nav_cerrar"
-                android:icon="@drawable/ic_menu_send"
+                android:icon="@drawable/ic_lock_power_off"
                 android:title="Cerrar sesion" />
         </menu>
     </item>
